# nonebot_plugin_nai3

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: issue-template-question.md
nonebot_plugin_nai3/: __init__.py  config.py  utils.py
