[tool.poetry]
name = "nonebot-plugin-nai3"
version = "0.1.8"
description = "通过 NovelAI 生成图片"
authors = ["zhulinyv <zhulinyv2005@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_nai3"}]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.2.1"
httpx = "^0.24.1"
nonebot-adapter-onebot = "^2.2.3"
ujson = "^5.9.0"
nudenet = "^3.0.8"
nonebot-plugin-smms = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
[tool.black]
line-length = 120

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
line-length = 120
# https://beta.ruff.rs/docs/rules/
lint.select = ["E", "W", "F"]
lint.ignore = ["E501"]
# Exclude a variety of commonly ignored directories.
respect-gitignore = true
lint.ignore-init-module-imports = true

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
